fix: styles and make the dark mode enabled application

--- a/src/style.css
+++ b/src/style.css
@@ -10,12 +10,12 @@
         min-height: 100%;
     }
     body {
-        @apply font-rubik bg-very_dark_blue !py-8 relative min-h-screen flex justify-center items-center;
+        @apply font-rubik bg-very_dark_blue dark:bg-[#F0F4EF] !py-8 relative min-h-screen flex justify-center items-center;
     }
 }
 
 main {
-    @apply p-5 min-[375px]:p-4 min-[540px]:px-28 xl:px-[10.25rem];    
+    @apply p-5 min-[375px]:p-4 min-[540px]:px-28 xl:px-[10.25rem] relative;
 }
 
 .SectionContainer {
@@ -24,31 +24,31 @@ main {
 
 /* UserStatSwitch */
 .UserInfoGroup {
-    @apply flex items-center gap-4 px-7 py-[34px] bg-primary-blue rounded-2xl xl:flex-col xl:items-start xl:gap-10 xl:pb-[4.8rem];
+    @apply relative flex items-center gap-4 px-7 py-[34px] bg-primary-blue dark:bg-[#fbfefb] rounded-xl xl:flex-col xl:items-start xl:gap-10 xl:pb-[4.8rem] dark:shadow-lg;
 }
 
 .UserAvatar {
-    @apply inline-block size-[54px] rounded-full border-[3px] border-[#fff] min-[375px]:size-[69px] xl:size-[5.3rem];
+    @apply inline-block size-[54px] rounded-full dark:border-pale_blue border-[3px] border-[#fff] min-[375px]:size-[69px] xl:size-[5.3rem];
 }
 
 .ReportFor {
-    @apply flex flex-col px-1 font-thin text-[#fff] text-[1.5rem] leading-none xl:gap-1 xl:text-5xl xl:text-[2.5rem] xl:leading-[1.2];
+    @apply flex flex-col px-1 font-thin text-[#fff] dark:text-very_dark_blue text-[1.5rem] leading-none xl:gap-1 xl:text-5xl xl:text-[2.5rem] xl:leading-[1.2];
 }
 
 .ReportFor span {
-    @apply text-pale_blue font-normal text-[15px];
+    @apply text-pale_blue font-normal text-[15px] dark:text-dark_blue;
 }
 
 .StatSwitch {
-    @apply block text-center w-full text-desaturated_blue font-normal text-sm min-[375px]:text-lg hover:cursor-pointer xl:max-w-max xl:self-start;
+    @apply block text-center w-full text-desaturated_blue font-normal text-sm min-[375px]:text-lg hover:cursor-pointer xl:!text-left xl:self-start;
 }
 
 .StatSwitch.active {
-    @apply text-[#fff];
+    @apply text-[#fff] dark:text-very_dark_blue;
 }
 
 .ButtonContainer {
-    @apply flex items-center justify-between py-4 min-[375px]:py-6 xl:flex-col xl:px-5 xl:gap-[14px] xl:px-8;
+    @apply flex items-center justify-between py-4 min-[375px]:py-6 xl:flex-col xl:gap-[14px] xl:px-8;
 }
 
 /* TimeStat */
@@ -62,7 +62,7 @@ main {
 }
 
 .TimeStatHeading {
-    @apply text-[#fff] !font-thin text-3xl min-[540px]:text-5xl;
+    @apply text-[#fff] !font-thin text-3xl min-[540px]:text-5xl dark:text-dark_blue;
 }
 
 .TimeStatHeadingSpan {
@@ -70,7 +70,7 @@ main {
 }
 
 .WorkWithUtility {
-    @apply flex items-center justify-between text-sm font-more text-[#fff] min-[375px]:text-lg;
+    @apply flex items-center justify-between text-sm font-more text-[#fff] dark:text-desaturated_blue min-[375px]:text-lg;
 }
 
 /* Stat */
@@ -80,39 +80,61 @@ main {
 }
 
 .Stat {
-    @apply flex rounded-2xl rounded-b-[14.8px] pt-11 xl:justify-end;
+    @apply flex rounded-2xl rounded-b-[14.8px] pt-11 xl:justify-end dark:shadow-lg;
+}
+
+.ThreeDots {
+    @apply dark:!mix-blend-difference;
 }
 
 .StatInnerContainer {
-    @apply flex w-full flex-col bg-dark_blue rounded-xl py-6 px-4 min-[375px]:p-6 min-[375px]:gap-[0.85rem] min-[540px]:gap-4 min-[540px]:p-7 xl:gap-[1.5rem];
+    @apply flex w-full flex-col bg-dark_blue dark:bg-[#FBFEFB] rounded-xl py-6 px-4 min-[375px]:p-6 min-[375px]:gap-[0.85rem] min-[540px]:gap-4 min-[540px]:p-7 xl:gap-[1.5rem] dark:shadow-lg;
 }
 
 .Work {
-    @apply bg-primary-work bg-[top_-0.65rem_right_1rem] !bg-[length:5rem_5rem];
+    @apply bg-primary-work dark:bg-blend-color-dodge dark:bg-[#dbdfdb] bg-[top_-0.65rem_right_1rem] !bg-[length:5rem_5rem];
 }
 
 .Play {
-    @apply bg-primary-play bg-[top_-0.5rem_right_1.2rem] !bg-[length:4.8rem_4.8rem];
+    @apply bg-primary-play dark:bg-blend-color-dodge dark:bg-[#dbdfdb] bg-[top_-0.5rem_right_1.2rem] !bg-[length:4.8rem_4.8rem];
 }
 
 .Study {
-    @apply bg-primary-study bg-[top_-0.4rem_right_1rem] !bg-[length:5rem_5rem];
+    @apply bg-primary-study dark:bg-blend-color-dodge dark:bg-[#dbdfdb] bg-[top_-0.4rem_right_1rem] !bg-[length:5rem_5rem];
 }
 
 .Exercise {
-    @apply bg-primary-exercise bg-[top_-0.2rem_right_1rem] !bg-[length:auto_3.5rem];
+    @apply bg-primary-exercise dark:bg-blend-color-dodge dark:bg-[#dbdfdb] bg-[top_-0.2rem_right_1rem] !bg-[length:auto_3.5rem];
 }
 
 .Social {
-    @apply bg-primary-social bg-[top_-0.7rem_right_1rem];
+    @apply bg-primary-social dark:bg-blend-color-dodge dark:bg-[#dbdfdb] bg-[top_-0.7rem_right_1rem];
 }
 
 .Self-Care {
-    @apply bg-primary-selfcare bg-[top_-0.7rem_right_1.05rem] bg-contain;
+    @apply bg-primary-selfcare dark:bg-blend-color-dodge dark:bg-[#dbdfdb] bg-[top_-0.7rem_right_1.05rem] bg-contain;
 }
 
 /* StatControlContainer */
 
 .StatControlContainer {
-    @apply bg-dark_blue rounded-xl;
+    @apply bg-dark_blue dark:bg-[#dbdfdb] dark:bg-blend-color-dodge rounded-xl;
+}
+
+/* Toggle Button */
+
+.theme-toggle {
+    @apply  bg-desaturated_blue px-4 py-2 rounded-lg text-[#fff] bg-[#00000000] border-none;
+}
+
+.theme-toggle img {
+    @apply inline-block size-8;
+}
+
+.ChangeDetailIcon {
+    @apply size-8 cursor-pointer;
+}
+
+.UtilityWrapper {
+    @apply absolute top-8 right-2 flex flex-col gap-2 items-center;
 }
